# JsonExpandOMatic

./: .bumpversion.cfg  .gitignore  Makefile  README.md  caca.py  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini  wrapper.sh
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
src/: json_expand_o_matic.py
src/json_expand_o_matic/: __init__.py  cli.py  contract_lazily.py  contraction_proxy.py  contractor.py  cycles.py  expand_o_matic.py  expander.py  expansion_pool.py  expansion_zipper.py  jsonrefkeeper.py  lazy_contractor.py  leaf_node.py  pydantic_contractor.py
tests/: test_laziness.py  test_lazy_loading.py  test_leaves.py  test_pydantic.py  test_simple.py  test_simple_laziness.py
tests/testresources/: actor-data.json  lazy.py  model.py
tests/unit/: fixtures.py  model.py  model_less_lazy.py  model_less_lazy_with_lazy_base_thing.py  model_less_lazy_with_lazy_pydantic_base_thing.py  model_with_lazy_base_thing.py  model_with_lazy_pydantic_base_thing.py  test_jsonref.py  test_lazy.py  test_leaves.py  test_pydantic.py  test_simple.py
